--- a/Blackjack/Blackjack.css
+++ b/Blackjack/Blackjack.css
@@ -12,7 +12,13 @@ body{
     display:flex;
     background-color:brown;
     padding:10px;
-    justify-content:center;  
+    justify-content:center;
+}
+.horseplay{
+    display:flex;
+    background-color: white;
+    padding:10px;
+    margin:10px;
 }
 .house{
     display:flex;
